// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template-tree ancestors should get ancestor items 1`] = `
{
  "content": [
    {
      "text": "[{"name":"_Test Child Template","id":"00000000-0000-0000-0000-000000000000","parent":null,"hasChildren":false}]",
      "type": "text",
    },
  ],
}
`;

exports[`template-tree ancestors should handle non-existent item 1`] = `
{
  "content": [
    {
      "text": "[]",
      "type": "text",
    },
  ],
}
`;

exports[`template-tree children should get child items 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`template-tree children should handle non-existent parent 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`template-tree get-root should get root level templates 1`] = `
{
  "content": [
    {
      "text": "{"total":2,"items":[{"name":"Master","id":"ee0257b9-9fb0-4e90-bc99-f8ab75c6100e","parent":null,"hasChildren":true},{"name":"XMLSitemap","id":"72f84ac5-d043-4035-937f-2f0a99d6afbe","parent":null,"hasChildren":false}]}",
      "type": "text",
    },
  ],
}
`;

exports[`template-tree get-search should search for templates by name 1`] = `
{
  "content": [
    {
      "text": "{"items":[{"alias":"_testRootTemplate","name":"_Test Root Template","id":"00000000-0000-0000-0000-000000000000"}],"total":1}",
      "type": "text",
    },
  ],
}
`;
